added google_ad, and etc.

--- a/assets/i18n/ru.json
+++ b/assets/i18n/ru.json
@@ -40,6 +40,11 @@
     "slash": "/",
 
     "exit": "Выход",
-    "team": "R2 TEAM"
+    "team": "R2 TEAM", 
+
+    "ad.title": "Реклама не загрузилась", 
+
+    "comment.hint": "Ваш комментарий",
+    "comment.submit":"Отправить"
     
 }
