--- a/assets/i18n/en.json
+++ b/assets/i18n/en.json
@@ -41,5 +41,10 @@
     "slash": "/",
 
     "exit": "Exit",
-    "team": "R2 TEAM"
+    "team": "R2 TEAM", 
+
+    "ad.title": "Ad not loaded",
+
+    "comment.hint":"Tell us your comment", 
+    "comment.submit": "Submit"
 }
